--- a/templates/article.html.twig
+++ b/templates/article.html.twig
@@ -1,2 +1,2 @@
 <{{ tags.title }}><a href="{{ url }}">{{ title }}</a></{{ tags.title }}>
-{{ content | replace({'<code>': '<code class="bash">'}) | raw }}
+{{ content | raw }}
